# Game-Off-2023

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
asset_sources/furniture/: Bed_King_0.blend  Table_RoundSmall_0.blend  bookcase_0_quaternius.blend  cabinet_0.blend  cardboard_boxes_0_quaternius.blend  closet_0_quaternius.blend  coffee_table_0.blend  couch_0.blend  couch_1.blend  cutting_board_0.blend  desk_0.blend  desk_0_quaternius.blend  desk_lamp_0.blend  door_0.blend  fireplace_0.blend  floating_shelf.blend  flower_pot_0.blend  flower_pot_1.blend  flower_pot_2.blend  flower_pot_3.blend  fridge_0.blend  jar_0.blend  kitchen_table_0.blend  laptop_0.blend  light_bulb_0.blend  open_shelf_0.blend  painting_0.blend  painting_1.blend  painting_easel_0.blend  pillow_0.blend  record_player_0.blend  speaker.blend  speaker_0.blend  table_0.blend  table_1.blend  the_scale.blend  tv_0.blend
assets/: assets_game.assets.ron  settings.ron  world.blend
assets/enemies/: rat.enemy.ron  snake.enemy.ron  spider.enemy.ron
assets/models/: World.glb  world.blend  world.glb
assets/models/characters/: rat.glb  rat.gltf  snake.glb  spider.glb
assets/models/foods/glb/: Apple.glb  Avocado.glb  Banana.glb  Bread_Slice.glb  Broccoli.glb  Carrot.glb  ChickenLeg.glb  Croissant.glb  Eggplant.glb  Hotdog.glb  Orange.glb  Steak.glb  Tomato.glb
assets/models/foods/gltf/: Apple.gltf  Avocado.gltf  Banana.gltf  Bread_Slice.gltf  Broccoli.gltf  Carrot.gltf  ChickenLeg.gltf  Croissant.gltf  Eggplant.gltf  Hotdog.gltf  Orange.gltf  Steak.gltf  Tomato.gltf
assets/source/: toaster.blend
assets/sprites/: destroy_the_scale_logo.png~
assets/world/: World.glb  World.gltf  world.blend
assets/world/models/: World.glb
src/: camera.rs  debug.rs  health.rs  hud.rs  input.rs  main.rs  movement.rs  settings.rs  style.rs  systems.rs  util.rs
src/debug/: end_game.rs  lighting.rs  mod.rs  physics.rs  scale.rs  shadows.rs  state_debug.rs  systems.rs
src/enemies/: mod.rs  model.rs  template.rs
src/food/: mod.rs
src/game/: hit_effect.rs  mod.rs  systems.rs
src/game/endboss/: mod.rs
src/game/ending/: lose_state.rs  mod.rs  win_state.rs
src/game/enemies/: attack.rs  components.rs  events.rs  mod.rs  model.rs  roaming.rs  spawn.rs  template.rs
src/game/food/: components.rs  mod.rs  systems.rs
src/game/health/: mod.rs
src/game/hud/: crosshair.rs  health.rs  mod.rs  player_ui.rs
src/game/level/: blueprints.rs  enemy_spawner.rs  mod.rs  player.rs  systems.rs
src/game/movement/: ground.rs  mod.rs
src/game/pause/: mod.rs
src/game/player/: calories.rs  camera.rs  components.rs  eat.rs  events.rs  mod.rs  punch.rs  spawn.rs  systems.rs
src/game/scaling/: mod.rs
src/main_menu/: components.rs  mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs  mod.rs
src/main_menu/systems/graphics/: interactions.rs  layout.rs  mod.rs
src/main_menu/systems/keyboard/: interactions.rs  layout.rs  mod.rs
src/main_menu/systems/main/: interactions.rs  layout.rs  mod.rs
src/main_menu/systems/options/: interactions.rs  layout.rs  mod.rs
src/main_menu/systems/sounds/: interactions.rs  layout.rs  mod.rs
src/menu/: components.rs  input_tranformer.rs  mod.rs  setting.rs  styles.rs  systems.rs
src/menu/systems/: interactions.rs  mod.rs
src/menu/systems/graphics/: interactions.rs  layout.rs  mod.rs
src/menu/systems/keyboard/: interactions.rs  layout.rs  mod.rs
src/menu/systems/main/: interactions.rs  layout.rs  mod.rs
src/menu/systems/options/: interactions.rs  layout.rs  mod.rs
src/menu/systems/sounds/: interactions.rs  layout.rs  mod.rs
src/movement/: mod.rs
src/objects/: food.rs
src/player/: eat.rs  mod.rs  nutrition.rs
src/proxies/: lighting.rs  mod.rs  physics.rs  random_model.rs
src/scaling/: mod.rs
src/settings/: fs.rs  mod.rs  systems.rs
